--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque harum iste ab ullam quae?</p>
         </div>
         <div class="right">
-            <h3>Welcome back to the <br> CodeCquid Community</h3><br>
+            <h3>Welcome back to the <br> CodeSquid Community</h3><br>
             <div class="social">
                 <div class="social-media">
                     <a href="#">
